--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,11 +3,11 @@ name: Deploy Astro to GitHub Pages
 on:
   # Trigger the workflow every time you push to the `main` branch
   push:
-    branches: [master]
+    branches:
+      - master
   # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
 
-# Allow this job to clone the repo and create a page deployment
 permissions:
   contents: read
   pages: write
@@ -26,11 +26,9 @@ jobs:
           node-version: '16'
           cache: 'npm'
 
-      # Not using npm? Change `npm ci` to `yarn install` or `pnpm i`
       - name: Install dependencies
         run: npm ci
 
-      # Not using npm? Change `npm run build` to `yarn build` or `pnpm run build`
       - name: Build Astro
         run: npm run build --if-present
 
@@ -43,12 +41,18 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ needs.build.outputs.artifacts_dist }}
+      url: ${{ steps.build.outputs.artifacts_dist }}
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: dist
+          path: ./dist
+
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
-          branch: gh-pages
-          folder: code-oasis-website/dist
+          branch: master
+          folder: dist
