--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,4 +75,5 @@ jobs:
           git commit -m "Auto-deploy to GitHub Pages"
           git push origin main
         env:
-          DEPLOY_KEY_PATH: ${{ github.workspace }}/.ssh/id_rsa
+          DEPLOY_KEY_PATH: ${{ github.workspace }}/.ssh/id_ed25519
+
