--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^2.5.0",
     "@astrojs/tailwind": "^3.1.1",
     "@fontsource/inter": "^4.5.15",
-    "astro": "^2.2.0",
+    "astro": "^2.9.3",
     "framer-motion": "^10.11.2",
     "npm-check-updates": "^16.10.7",
     "tailwindcss": "^3.3.1"
