--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/netlify": "^2.5.0",
     "@astrojs/tailwind": "^3.1.1",
+    "@astrojs/vercel": "^3.7.4",
     "@fontsource/inter": "^4.5.15",
     "astro": "^2.9.3",
     "framer-motion": "^10.11.2",
